--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="enter_text">Введите текст</string>
     <string name="another_text_layout">В другой раскладке</string>
     <string name="copy_to_clipboard">Copy</string>
+    <string name="text_was_copied">Текст скопирован</string>
     <string name="password_generation_welcome">Сгенерируем пароль</string>
     <string name="password_generation_check_strong">Проверим надежность</string>
     <string name="password_generation_which_symbols">Какие символы добавим?</string>
