debug: NPE on getString R.string, initial logic for password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="password_medium">Средний</string>
     <string name="password_weak">Слабый</string>
     <string name="symbols_amount">Символов</string>
+    <string name="ready_password">Готовый пароль</string>
 
     <item name="en_up" type="string" translatable="false">
         QWERTYUIOP{}ASDFGHJKL:"ZXCVBNM&lt;&gt;
