--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">PasswordApp</string>
     <string name="enter_text">Введите текст</string>
     <string name="paste_text">Вставьте текст с помощью кнопки</string>
-    <string name="another_text_layout">В другой раскладке</string>
+    <string name="another_text_layout">EN &#8596; RU</string>
     <string name="copy_to_clipboard">Copy</string>
     <string name="paste_from_clipboard">Paste</string>
     <string name="text_was_copied">Текст скопирован</string>
